Fix flickering and remove initial animation

--- a/src/Skills/style.css
+++ b/src/Skills/style.css
@@ -48,6 +48,7 @@
                 font-size: 1rem;
                 font-weight: 400;
                 margin: 0.5rem;
+                text-align: center;
             }
         }
     }
